charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sneakr-ingress
  namespace: gic-group-9
spec:
  rules:
  - host: sneakr.k3s
    http:
      paths:
      - backend:
          service:
            name: nginx-svc
            port:
              name: http
        path: /
        pathType: Prefix
      - backend:
          service:
            name: django-svc
            port:
              name: http
        path: /api
        pathType: Prefix
  - host: sneakr-monitoring.k3s
    http:
      paths:
      - backend:
          service:
            name: grafana-svc
            port:
              name: http
        path: /
        pathType: Prefix
